Update README: five-layer architecture, new dependencies, performance benchmarks, acknowledgments